--- a/Shopping/Views/Shared/_Layout.cshtml
+++ b/Shopping/Views/Shared/_Layout.cshtml
@@ -227,6 +227,9 @@
         <i class="fas fa-arrow-up"></i>
     </a>
 
+    <!-- AI Chatbot Widget -->
+    <partial name="_ChatbotWidget" />
+
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
